vol-113 - bugfix + mail connection try catch (#62)
Co-authored-by: Musiałowicz, Michał <Mmusialowicz@psi.pl>
Reviewed-on: https://git.wmi.amu.edu.pl/s464956/volontario/pulls/62